feat(UiToast) Обновлены возможности тостов
1. Добавлена возможность удаления тостов.
2. Добавлен новый тип тостов - info

--- a/src/assets/styles/_variables.css
+++ b/src/assets/styles/_variables.css
@@ -13,6 +13,7 @@
   --red: #db3851;
   --red-light: #e8656f;
   --green: #24a37e;
+  --yellow: #f7c400;
   --green-light: #dff2ec;
   --default-cover: url('../images/undraw_conference_speaker_6nt7.svg');
 }
